// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render summary for 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should render total for all expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $2,353,423.43
  </h1>
</div>
`;
